...
                                                                <constraint firstAttribute="height" constant="44" id="bS9-8l-NLU"/>
                                                            </constraints>
                                                            <state key="normal" title="Buy">
                                                                <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                            </state>
...
                                                                <nil key="highlightedColor"/>
                                                            </label>
                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="price" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JhD-Cv-MbH">
                                                                <rect key="frame" x="264" y="199" width="38" height="20"/>
                                                                <fontDescription key="fontDescription" name="Georgia" family="Georgia" pointSize="17"/>
...
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Items" id="O6w-Hb-VMQ"/>
                    <connections>
                        <outlet property="tableView" destination="7RD-xz-14y" id="H2q-Ua-vQY"/>
...
                                                                    <rect key="frame" x="119" y="0.0" width="81" height="30"/>
                                                                    <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                                                    <accessibility key="accessibilityConfiguration" identifier="nameOfArticle"/>
                                                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                                                    </constraints>
                                                                    <fontDescription key="fontDescription" type="system" pointSize="23"/>
                                                                    <state key="normal" title="Share"/>
                                                                    <connections>
                                                                        <action selector="shareBtn:" destination="JUf-99-qLy" eventType="touchUpInside" id="Yal-bb-3gR"/>
...
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" enabled="NO" title="Next" id="OPT-Ly-bh5">
                            <connections>
                                <action selector="nextBtn:" destination="lMS-j8-KOf" id="zu7-ww-Fi5"/>
...
