...
                            <constraint firstItem="SKi-q9-mJv" firstAttribute="height" secondItem="HqP-mu-CSL" secondAttribute="height" id="cF9-8W-VE5"/>
                            <constraint firstItem="vyR-oc-Xoq" firstAttribute="width" secondItem="HqP-mu-CSL" secondAttribute="width" id="tyl-Fr-vYs"/>
                            <constraint firstItem="vyR-oc-Xoq" firstAttribute="top" secondItem="qHT-He-5Fr" secondAttribute="bottom" id="vXz-14-5Ay"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" id="qRk-Hz-Gtg">
                        <barButtonItem key="leftBarButtonItem" title="Cancel" id="l6E-2C-k9d">
                            <connections>
                                <action selector="didCancelButtonPressed:" destination="0Gy-To-sv4" id="T5A-B0-xZN"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
...
